# symmetrical-doodle

./: .env  .env.example  .env.llm.example  .env.railway  .gitignore  ALL_FEATURES_SUMMARY.md  CONTEXT_TRANSFER_SUMMARY.md  Cargo.toml  DATA_IMPORT_FEATURE.md  DERIV_IMPLEMENTATION_COMPLETE.md  DERIV_QUICK_START.md  Dockerfile.railway  F3_VS_F8_COMPARISON.md  F5_F8_BACKEND_INTEGRATION_COMPLETE.md  F5_F8_TASK_SUMMARY.md  F5_PORTFOLIO_COMPLETE.md  F6_EXECUTION_COMPLETE.md  F7_SIMULATION_BACKEND_INTEGRATION_COMPLETE.md  F7_SIMULATION_COMPLETE.md  F8_IMPLEMENTATION_COMPLETE.md  FRONTEND_BACKEND_INTEGRATION.md  IDEAL_EXPERIENCE_PLAN.md  INTEGRATION_CHECKLIST.md  INTEGRATION_GUIDE.md  INTELLIGENCE_FEATURES_GUIDE.md  MARKETS_DATA_ARCHITECTURE.md  MARKETS_IMPLEMENTATION_SUMMARY.md  MARKETS_README.md  ML_MODELS_COMPLETE.md  ML_MODELS_IMPLEMENTATION_PLAN.md  ML_MODELS_OFFLINE_COMPLETE.md  Makefile  NEO4J_AURA_COMPLETE.md  NEO4J_AURA_SETUP.md  NEO4J_AURA_TROUBLESHOOTING.md  QUICKSTART.md  QUICK_START_F3_F8.md  QUICK_START_F5.md  QUICK_START_F5_F8_BACKEND.md  QUICK_START_F6.md  (+21 more)
execution-core/: Cargo.toml  Dockerfile
execution-core/config/: models.toml
execution-core/proptest-regressions/: risk.txt
execution-core/src/: config.rs  deriv_adapter.rs  derivatives.rs  event_bus.rs  execution_adapter.rs  execution_manager.rs  health.rs  health_property_test.rs  integration_example.rs  lib.rs  main.rs  market_data.rs  ml_inference.rs  portfolio.rs  risk.rs  shadow_execution.rs  shutdown.rs
intelligence-layer/: Dockerfile  pyproject.toml  pytest.ini  test_config.py  test_import.py  test_minimal.py  test_simple.py
intelligence-layer/.hypothesis/constants/: 12897b1270dc975c  169976c92cdd5e80  17fd27ca84adefc2  2117e2ae99106f52  22aa60e2440a9939  336f9357d901c448  3540852836183ed4  4575ab0a05b2ad47  48b16c16f0efefd9  4a4940f01f7a6d65  8a587afd03eba074  a32af238e3512477  bd35be96394e31f8  dc869fbf1c69106f  dd98f16a32455190  df5d7c55c2dcee1f  e19c4c3f2489061e  ec76beec950f6fd6  ed59a63223f2494e  f462f6680c7bffdb
intelligence-layer/.hypothesis/examples/04e6b3400353b141/: 0104c64d87cfe4df  052b52d1ea3dd9cc  05f7cbd65b997f1f  079bf0aa783dec14  094e5fadd1787c97  0feb88aa9fd0369d  10350f8ca4566098  16326f999fcfe01e  1de0549ad7a23f29  2466113ed326307e  3124083d9673ce58  3227976a7ef65463  351c0175ecb9a2d0  38bb12bcc49140ba  391a9d5ea755f14b  44e1090ea145304d  450d7938f8293b68  4a1dcbca88a20f67  4b439c9c6134727b  520ad0a93bc704fc  54505efdaeba4da8  54d2e45a4ca2c5bd  5a51991614e84949  5cb94d1dfa7e99ce  5e11c246e45a857b  66132a0c3ab9eb79  692580a9a3de01eb  7adeec2ef36e1f58  7ce7cd94cc660762  7ddcaac7a9543ded  7f73a492d7799c2a  81a83ac06b284d4a  81b1fc2913c52e1d  87b8fd0d19a4e8c5  8850563fcc9a8a34  8a5ad09d64e64f00  8ef71679ff6e1f4e  91492236cd52616a  9a5c548b54f6d5c9  a0f579bb7f6af77e  (+21 more)
intelligence-layer/.hypothesis/tmp/: tmp7sk558z5  tmpgx5igdt3  tmpij5j9cw0  tmplodqg732  tmpnyjb38h2  tmpryjfxhxl  tmpx50iqor0
intelligence-layer/src/intelligence_layer/: __init__.py  academic_safeguards.py  config.py  data_import.py  deriv_integration.py  derivatives_api.py  derivatives_backtesting.py  derivatives_pricing.py  embedding_model.py  evaluation_metrics.py  experiment_config.py  feature_extraction.py  graph_analytics.py  health.py  llm_config.py  llm_service.py  logging.py  main.py  market_analytics.py  market_data_providers.py  mlflow_routes.py  mlflow_service.py  model_registry.py  models.py  rag_service.py  regime_detection.py  research_service.py  rl_environment.py  shutdown.py  state_assembly.py  strategy_orchestration.py  strategy_registry.py  training_protocol.py
intelligence-layer/src/intelligence_layer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
intelligence-layer/tests/: __init__.py  test_data_validation_property.py  test_embedding_model.py  test_embedding_model_validation_property.py  test_end_to_end_integration.py  test_experiment_reproducibility_property.py  test_experiment_reproducibility_property_standalone.py  test_fastapi_statefulness.py  test_feature_extraction.py  test_gds_algorithm_execution_property.py  test_graceful_shutdown_completeness_property.py  test_health_check_accuracy_property.py  test_intelligence_sandboxing_property.py  test_neo4j_schema.py  test_pgvector_schema.py  test_rl_environment.py  test_rl_environment_mdp_compliance_property.py  test_rl_state_completeness_property.py  test_shutdown.py  test_strategy_orchestration.py  test_stress_testing_scenarios.py  test_training_protocol.py  test_training_protocol_compliance_property.py
nautilus-integration/: Dockerfile  debug_error_handling.py  debug_import.py  debug_import_test.py  debug_pipeline.py  docker-compose.yml  pyproject.toml  requirements.txt  test_circuit_breaker.py  test_error_handling_simple.py  test_import.py  test_import_fix.py  test_minimal.py  test_minimal_error_handling.py  test_simple.py
nautilus-integration/config/: .env.example
nautilus-integration/scripts/: setup.ps1  setup.py  setup.sh
nautilus-integration/src/nautilus_integration/: __init__.py  main.py
nautilus-integration/tests/: __init__.py  test_basic_imports.py  test_comprehensive_performance_validation.py  test_config.py  test_data_catalog_adapter.py  test_data_catalog_basic.py  test_data_catalog_functional.py  test_data_migration_integrity_property.py  test_dependency_manager.py  test_end_to_end_integration.py  test_error_handling_monitoring.py  test_feature_dependency_orchestrator.py  test_feature_flag_service.py  test_minimal_adapter.py  test_nautilus_integration_completeness_property.py  test_performance_and_load_integration.py  test_production_readiness_validation.py  test_risk_management_gate_enforcement_property.py  test_signal_routing_property.py  test_signal_routing_simple.py  test_simple_performance_validation.py  test_simple_production_readiness.py  test_strategy_translation_correctness_property.py  test_strategy_translation_implementation.py
scripts/knowledge-ingestion/rust_bindings/: Cargo.toml  build.py
simulation-engine/: Cargo.toml
simulation-engine/src/: backtesting.rs  clock.rs  lib.rs
(+533 files in other folders)
