[package]
name = "execution-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "execution-core"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
warp = "0.3"

# ONNX Runtime for ML model inference
ort = { version = "2.0", default-features = false, features = ["load-dynamic"] }
ndarray = "0.15"
toml = "0.8"

[dev-dependencies]
proptest = { workspace = true }