[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligence-layer"
version = "0.1.0"
description = "Intelligence layer for algorithmic trading system"
authors = [{name = "Trading System", email = "dev@tradingsystem.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "neo4j>=5.14.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "structlog>=23.2.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "hmmlearn>=0.3.0",
    "pyarrow>=14.0.0",
    "psutil>=5.9.0",
    "aioredis>=2.0.1",
    "yfinance>=0.2.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    # LLM and RAG dependencies
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.18",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "groq>=0.4.0",
    "together>=0.2.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=4.1.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    # MLflow and ML Operations
    "mlflow>=2.10.0",
    "mlflow-skinny>=2.10.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.88.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true