[package]
name = "vector_ops"
version = "0.1.0"
edition = "2021"

[lib]
name = "vector_ops"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.7"
ndarray = "0.15"
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
num-traits = "0.2"
libc = "0.2"

[dependencies.numpy]
version = "0.20"
features = ["nalgebra"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1